@@ -1,3 +1,8 @@
+2004-09-01  Stipe Tolj  <stolj@wapme.de>
+    * doc/userguide/userguide.xml: moved EMI/UCP specific 'throughput' to 
+      general section, since this is within the SMSCConn structure itself.
+      Added 'smasi' features to the check lists.
+
 2004-08-30 Alexander Malysh <amalysh at kannel.org>
     * gwlib/gw-rwlock.[ch]: fixed includes. we don't define HAVE_CONFIG_H so
       gw-config.h should be always included.
